Public commit #2 - simplified sample auth workflow
