# back-end/controllers/origins.py
@@ -1,10 +1,13 @@
-import connexion
-
 from services.origins import get_loan_information
 
-# Origins retrieve controller
-def retrieve(id, partnerAccessToken):
+"""" Origins retrieve controller """
 
-	res = get_loan_information(id, partnerAccessToken)
 
-	return res, 200
+def retrieve(origin_id, partner_access_token):
+
+    res = get_loan_information(origin_id, partner_access_token)
+    if res is False: # This means the credentials are not valid
+        res['status'] = "Invalid username or password"
+        return res, 401
+    else: # if credentials are valid simply pass on the response
+        return res, 200
